--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title> html-project </title>
+             <!--comment-->
     </head>
     <body>
         <a name="TopOfThePage"> </a>
